--- a/Proyecto-Final/Views/Visitas/Delete.cshtml
+++ b/Proyecto-Final/Views/Visitas/Delete.cshtml
@@ -1,96 +1,81 @@
 ﻿@model proyecto_final.Models.Visita
 
 @{
-    Layout = null;
+    ViewBag.Title = "Delete";
+    Layout = "~/Views/Shared/Medico.cshtml";
 }
 
-<!DOCTYPE html>
+<h2>Delete</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
-</head>
-<body>
-    <h3>Are you sure you want to delete this?</h3>
-    <div>
-        <h4>Visita</h4>
-        <hr />
-        <dl class="dl-horizontal">
-            <dt>
-                @Html.DisplayNameFor(model => model.caso)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.caso)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Procedimientos)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Procedimientos)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Inicio)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Inicio)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Fin)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Fin)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.Prioridad)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.Prioridad)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.costo)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.costo)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.StatusENUM)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.StatusENUM)
-            </dd>
-    
-            <dt>
-                @Html.DisplayNameFor(model => model.paciente1.nombre)
-            </dt>
-    
-            <dd>
-                @Html.DisplayFor(model => model.paciente1.nombre)
-            </dd>
-    
-        </dl>
-    
-        @using (Html.BeginForm()) {
-            @Html.AntiForgeryToken()
-    
-            <div class="form-actions no-color">
-                <input type="submit" value="Delete" class="btn btn-default" /> |
-                @Html.ActionLink("Back to List", "Index")
-            </div>
-        }
-    </div>
-</body>
-</html>
+<h3>Are you sure you want to delete this?</h3>
+<div>
+    <h4>Visita</h4>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.caso)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.caso)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Procedimientos)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Procedimientos)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Inicio)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Inicio)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Fin)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Fin)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Prioridad)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Prioridad)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.costo)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.costo)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.paciente1.nombre)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.paciente1.nombre)
+        </dd>
+
+    </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
+</div>
