--- a/Proyecto-Final/Views/Visitas/Index.cshtml
+++ b/Proyecto-Final/Views/Visitas/Index.cshtml
@@ -5,13 +5,33 @@
     Layout = "~/Views/Shared/Medico.cshtml";
 }
 
-<h2>Index</h2>
+<div class="panel panel-default">
+    <div class="panel-heading" style="background:#2C3E50; color:#ffffff;"><h2 style="text-align:center; font-family:Arial; font-weight:700;">Pacientes</h2></div>
+    <div class="form-group ">
+        @using (@Html.BeginForm("Index", "Visitas", FormMethod.Get))
+        {
+            <b>Buscar Por:</b><br /><br />
+
+            @Html.RadioButton("searchBy", "caso", true, new { @class = "radio-inline" }) <text>caso</text>
+            @Html.RadioButton("searchBy", "costo", new { @class = "radio-inline" }) <text>Costo</text>
+            @Html.RadioButton("searchBy", "paciente", new { @class = "radio-inline" }) <text>paciente</text><br /><br />
+            <div>
+
+                @Html.TextBox("search", "buscar", new { @class = "form-control" })<br />
+                <input type="submit" value="search" class="btn btn-sm form-actions" />
+            </div>
+        }
+    </div>
+</div>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.paciente)
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.caso)
         </th>
@@ -39,6 +59,9 @@
 @foreach (var item in Model) {
     <tr>
         <td>
+            @Html.DisplayFor(modelItem => item.paciente)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.caso)
         </td>
         <td>
@@ -60,9 +83,9 @@
             @Html.DisplayFor(modelItem => item.paciente1.nombre)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
+            @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
+            @Html.ActionLink("Details", "Details", new { id = item.id }) |
+            @Html.ActionLink("Delete", "Delete", new { id = item.id })
         </td>
     </tr>
 }
