--- a/Proyecto-Final/Views/citas/Index.cshtml
+++ b/Proyecto-Final/Views/citas/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/Asistente.cshtml";
 }
 <div class="panel panel-default">
-    <div class="panel-heading" style="background:#2C3E50; color:#ffffff;"><h2 style="text-align:center; font-family:Arial; font-weight:700;">Pacientes</h2></div>
+    <div class="panel-heading" style="background:#2C3E50; color:#ffffff;"><h2 style="text-align:center; font-family:Arial; font-weight:700;">Citas</h2></div>
     <div class="form-group ">
         @using (@Html.BeginForm("Index", "citas", FormMethod.Get))
         {
