--- a/Proyecto-Final/Views/recetacitas/Index.cshtml
+++ b/Proyecto-Final/Views/recetacitas/Index.cshtml
@@ -5,7 +5,25 @@
     Layout = "~/Views/Shared/Medico.cshtml";
 }
 
-<h2>Index</h2>
+<div class="panel panel-default">
+    <div class="panel-heading" style="background:#2C3E50; color:#ffffff;"><h2 style="text-align:center; font-family:Arial; font-weight:700;">Recetas de Citas</h2></div>
+    <div class="form-group ">
+        @using (@Html.BeginForm("Index", "Visitas", FormMethod.Get))
+        {
+            <b>Buscar Por:</b><br /><br />
+
+            @Html.RadioButton("searchBy", "fecha", true, new { @class = "radio-inline" }) <text>fecha</text>
+            @Html.RadioButton("searchBy", "medicamentos", new { @class = "radio-inline" }) <text>medicamentos</text>
+            @Html.RadioButton("searchBy", "paciente", new { @class = "radio-inline" }) <text>paciente</text>
+            @Html.RadioButton("searchBy", "observaciones", new { @class = "radio-inline" }) <text>observaciones</text><br /><br />
+            <div>
+
+                @Html.TextBox("search", "buscar", new { @class = "form-control" })<br />
+                <input type="submit" value="search" class="btn btn-sm form-actions" />
+            </div>
+        }
+    </div>
+</div>
 
 <p>
     @Html.ActionLink("Create New", "Create")
