--- a/Proyecto-Final/Views/Home/Index.cshtml
+++ b/Proyecto-Final/Views/Home/Index.cshtml
@@ -24,20 +24,12 @@
             Asignar citas, para un día en específico, hora y duración de la misma.
             Consultar calendario con las citas pendientes por día
         </p>
-        <p class="btn btn-info">@Html.ActionLink("Gestionar Consultas", "Index", "consultas")</p>
+        <p class="btn btn-info">@Html.ActionLink("Consultar Citas", "Index", "citas")</p>
     </div>
-    <div class="col-md-4">
-        <h2>Reportes</h2>
-        <p>
-            Reporte de cumpleaños por mes, donde saldrá el nombre, apellido, fecha y
-            teléfono
-            de los pacientes que cumplen años en un mes seleccionado..
-        </p>
-        <p><a class="btn btn-default" href="#">Citas &raquo;</a></p>
-    </div>
+
     <div class="col-md-4">
         <h2>Gestiona Consultas</h2>
         <p>Registrará el pago de la consulta e imprimirá la factura de la misma. </p>
-        <p><a class="btn btn-default" href="#">Ver COnsultas &raquo;</a></p>
+        <p class="btn btn-info">@Html.ActionLink("Gestionar Consultas", "Index", "consultas")</p>
     </div>
 </div>
