--- a/Proyecto-Final/Views/Home/MedicoDashBoard.cshtml
+++ b/Proyecto-Final/Views/Home/MedicoDashBoard.cshtml
@@ -17,16 +17,17 @@
                 Fecha, Motivo, Comentario, Receta de medicamentos, fecha de próxima visita.
 
             </p>
-            <p class="btn btn-info">@Html.ActionLink("Gestionar Eventos", "Index", "Events")</p>
+            <p class="btn btn-info">@Html.ActionLink("Gestionar Visitas", "Index", "visitas")</p>
         </div>
         <div class="col-md-4">
             <h2>Citas</h2>
             <p>
-                El medico podrá imprimir la hoja de RECETA de medicamentos, generada en la
-                visita.
+                El medico puede definir una fecha para consulta (cita) próxima.
+                Puede consultar el calendario de citas.
+
 
             </p>
-            <p class="btn btn-info">@Html.ActionLink("imprimir recetas", "Index", "Events")</p>
+            <p class="btn btn-info">@Html.ActionLink("Geationar Cita", "Index", "citas2")</p>
         </div>
         <div class="col-md-4">
             <h2>Reportes</h2>
