--- a/Proyecto-Final/Views/Shared/Asistente.cshtml
+++ b/Proyecto-Final/Views/Shared/Asistente.cshtml
@@ -25,7 +25,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="navbar-brand"> Welcome @Session["Nombre"].ToString()</li>
+                    <li class="navbar-brand"> Bienvenido Asistente @Session["Nombre"].ToString()</li>
                     <li>@Html.ActionLink("Cerrar Session", "Logout", "Home")</li>
                 </ul>
             </div>
