--- a/Proyecto-Final/Views/Usuarios/Index.cshtml
+++ b/Proyecto-Final/Views/Usuarios/Index.cshtml
@@ -4,19 +4,20 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_layout.cshtml";
 }
+
 <div class="panel panel-default">
-    <div class="panel-heading" style="background:#2C3E50; color:#ffffff;"><h2 style="text-align:center; font-family:Arial; font-weight:700;">Pacientes</h2></div>
+    <div class="panel-heading" style="background:#2C3E50; color:#ffffff;"><h2 style="text-align:center; font-family:Arial; font-weight:700;">Usuarios</h2></div>
     <div class="form-group ">
-        @using (@Html.BeginForm("Index", "Visitas", FormMethod.Get))
+        @using (@Html.BeginForm("Index", "Usuarios", FormMethod.Get))
         {
             <b>Buscar Por:</b><br /><br />
 
-            @Html.RadioButton("searchBy", "nombre", true, new { @class = "radio-inline" }) <text>caso</text>
-            @Html.RadioButton("searchBy", "clave", new { @class = "radio-inline" }) <text>Costo</text>
-            @Html.RadioButton("searchBy", "tipo", new { @class = "radio-inline" }) <text>paciente</text><br /><br />
+            @Html.RadioButton("searchBy", "nombre", true, new { @class = "radio-inline" }) <text>Nombre</text>
+            @Html.RadioButton("searchBy", "clave", new { @class = "radio-inline" }) <text>Clave</text>
+            @Html.RadioButton("searchBy", "tipo", new { @class = "radio-inline" }) <text>Tipo</text><br /><br />
             <div>
 
-                @Html.TextBox("search", "buscar", new { @class = "form-control" })<br />
+                @Html.TextBox("search", "", new { @class = "form-control" })<br />
                 <input type="submit" value="search" class="btn btn-sm form-actions" />
             </div>
         }
@@ -39,23 +40,24 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nombre)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.clave)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.tipo)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Nombre)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.clave)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.tipo)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.id })
+            </td>
+        </tr>
+    }
 
 </table>
