--- a/Proyecto-Final/Views/citas/Index.cshtml
+++ b/Proyecto-Final/Views/citas/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/Asistente.cshtml";
+    Layout = "~/Views/Shared/_layout.cshtml";
 }
 <div class="panel panel-default">
     <div class="panel-heading" style="background:#2C3E50; color:#ffffff;"><h2 style="text-align:center; font-family:Arial; font-weight:700;">Citas</h2></div>
@@ -11,20 +11,18 @@
         {
             <b>Buscar Por:</b><br /><br />
 
-            @Html.RadioButton("searchBy", "fecha", true, new { @class = "radio-inline" }) <text>Nombre</text>
+            @Html.RadioButton("searchBy", "fecha", true, new { @class = "radio-inline" }) <text>fecha</text>
             @Html.RadioButton("searchBy", "costo", new { @class = "radio-inline" }) <text>Costo</text>
             @Html.RadioButton("searchBy", "cedula", new { @class = "radio-inline" }) <text>Cedula</text><br /><br />
             <div>
 
-                @Html.TextBox("search", "buscar", new { @class = "form-control" })<br />
+                @Html.TextBox("search", "", new { @class = "form-control" })<br />
                 <input type="submit" value="search" class="btn btn-sm form-actions" />
             </div>
         }
     </div>
 </div>
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+
 <table class="table">
     <tr>
         <th>
@@ -45,29 +43,31 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.fecha)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.hora)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.duracion)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.costo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.paciente.nombre)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id_cita }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id_cita }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id_cita })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.fecha)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.hora)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.duracion)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.costo)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.paciente.nombre)
+            </td>
+            <td>
+       
+                <p class="btn btn-warning">
+                    @Html.ActionLink("Mas Detalles", "Details", new { id = item.id_cita })
+                </p>   
+            </td>
+        </tr>
+    }
 
 </table>
