--- a/Proyecto-Final/Views/pacientes/Delete.cshtml
+++ b/Proyecto-Final/Views/pacientes/Delete.cshtml
@@ -59,7 +59,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            <p class="btn btn-dark"> @Html.ActionLink("Back to List", "Index")</p>   
+            @Html.ActionLink("Back to List", "Index")
         </div>
     }
 </div>
