--- a/Proyecto-Final/Views/Visitas/Delete.cshtml
+++ b/Proyecto-Final/Views/Visitas/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model proyecto_final.Models.Visita
+﻿@model proyecto_final.Models.visita
 
 @{
     ViewBag.Title = "Delete";
@@ -9,63 +9,55 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Visita</h4>
+    <h4>visita</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.caso)
+            @Html.DisplayNameFor(model => model.paciente)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.caso)
+            @Html.DisplayFor(model => model.paciente)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Procedimientos)
+            @Html.DisplayNameFor(model => model.fecha)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Procedimientos)
+            @Html.DisplayFor(model => model.fecha)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Inicio)
+            @Html.DisplayNameFor(model => model.proxima)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Inicio)
+            @Html.DisplayFor(model => model.proxima)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Fin)
+            @Html.DisplayNameFor(model => model.motivo)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Fin)
+            @Html.DisplayFor(model => model.motivo)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Prioridad)
+            @Html.DisplayNameFor(model => model.comentario)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.Prioridad)
+            @Html.DisplayFor(model => model.comentario)
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.costo)
+            @Html.DisplayNameFor(model => model.receta)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.costo)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.paciente1.nombre)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.paciente1.nombre)
+            @Html.DisplayFor(model => model.receta)
         </dd>
 
     </dl>
