--- a/Proyecto-Final/Views/citas/Create.cshtml
+++ b/Proyecto-Final/Views/citas/Create.cshtml
@@ -2,10 +2,11 @@
 
 @{
     ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/Asistente.cshtml";
+    Layout = "~/Views/Shared/_layout.cshtml";
 }
 
 <h2>Create</h2>
+
 
 @using (Html.BeginForm()) 
 {
@@ -20,6 +21,14 @@
             <div class="col-md-10">
                 @Html.DropDownList("cedula", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.cedula, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.consulta, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.consulta, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.consulta, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -66,3 +75,7 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
