--- a/Proyecto-Final/Views/citas/Details.cshtml
+++ b/Proyecto-Final/Views/citas/Details.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Details";
-    Layout = "~/Views/Shared/Asistente.cshtml";
+    Layout = "~/Views/Shared/_layout.cshtml";
 }
 
 <h2>Details</h2>
@@ -11,6 +11,21 @@
     <h4>cita</h4>
     <hr />
     <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.cedula)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.cedula)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.consulta)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.consulta)
+        </dd>
+
         <dt>
             @Html.DisplayNameFor(model => model.fecha)
         </dt>
@@ -53,7 +68,6 @@
 
     </dl>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.id_cita }) |
+<p class="btn btn-default" >
     @Html.ActionLink("Back to List", "Index")
 </p>
