--- a/Proyecto-Final/Views/pacientes/Create.cshtml
+++ b/Proyecto-Final/Views/pacientes/Create.cshtml
@@ -7,6 +7,7 @@
 
 <h2>Create</h2>
 
+
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
@@ -65,12 +66,16 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-success" />
+                <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
-<div>
-    <p class="btn btn-default"> @Html.ActionLink("Back to List", "Index")</p>
+<div class="btn btn-default">
+    @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
