actulizacion de estilo

--- a/Proyecto-Final/Views/Home/AsistenteDashBoard.cshtml
+++ b/Proyecto-Final/Views/Home/AsistenteDashBoard.cshtml
@@ -16,7 +16,7 @@
             del paciente, de lo contrario lo creará.
 
         </p>
-        <p class="btn btn-info">@Html.ActionLink("Gestionar Pacientes", "Index", "pacientes")</p>
+        <p class="btn btn-primary">@Html.ActionLink("Gestionar Pacientes", "Index", "pacientes")</p>
     </div>
     <div class="col-md-4">
         <h2>Citas</h2>
@@ -24,7 +24,7 @@
             Asignar citas, para un día en específico, hora y duración de la misma.
             Consultar calendario con las citas pendientes por día
         </p>
-        <p class="btn btn-info">@Html.ActionLink("Gestionar Citas", "Index", "citas1")</p>
+        <p class="btn btn-primary">@Html.ActionLink("Gestionar Citas", "Index", "citas1")</p>
     </div>
     <div class="col-md-4">
         <h2>Reportes</h2>
