--- a/Proyecto-Final/Views/Home/MedicoDashBoard.cshtml
+++ b/Proyecto-Final/Views/Home/MedicoDashBoard.cshtml
@@ -10,14 +10,14 @@
     </div>
     <div class="row">
         <div class="col-md-4">
-            <h2>Gestionar Pacientes</h2>
+            <h2>Gestionar de Usuarios</h2>
             <p>
                 Podrá registrar un evento de visita a un paciente seleccionado, asi como ver las
                 visitas anteriores. Para cada visita se registrarán los campos:
                 Fecha, Motivo, Comentario, Receta de medicamentos, fecha de próxima visita.
 
             </p>
-            <p class="btn btn-info">@Html.ActionLink("Gestionar Visitas", "Index", "visitas")</p>
+            <p class="btn btn-primary">@Html.ActionLink("Gestionar Visitas", "Index", "visitas")</p>
         </div>
         <div class="col-md-4">
             <h2>Citas</h2>
@@ -27,7 +27,7 @@
 
 
             </p>
-            <p class="btn btn-info">@Html.ActionLink("Geationar Cita", "Index", "citas2")</p>
+            <p class="btn btn-primary">@Html.ActionLink("Geationar Cita", "Index", "citas2")</p>
         </div>
         <div class="col-md-4">
             <h2>Reportes</h2>
