--- a/Proyecto-Final/Views/Shared/_layout.cshtml
+++ b/Proyecto-Final/Views/Shared/_layout.cshtml
@@ -11,6 +11,8 @@
     <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="~/Style/Style.css">
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top" c>
