--- a/Proyecto-Final/Views/citas/Index.cshtml
+++ b/Proyecto-Final/Views/citas/Index.cshtml
@@ -17,7 +17,7 @@
             <div>
 
                 @Html.TextBox("search", "", new { @class = "form-control" })<br />
-                <input type="submit" value="search" class="btn btn-sm form-actions" />
+                <input type="submit" value="Buscar" class="btn btn-sm form-actions" />
             </div>
         }
     </div>
