--- a/Proyecto-Final/Views/citas1/Index.cshtml
+++ b/Proyecto-Final/Views/citas1/Index.cshtml
@@ -18,13 +18,13 @@
             <div>
 
                 @Html.TextBox("search", "", new { @class = "form-control" })<br />
-                <input type="submit" value="search" class="btn btn-sm form-actions" />
+                <input type="submit" value="Buscar" class="btn btn-sm form-actions" />
             </div>
         }
     </div>
 </div>
 <p class="btn btn-default">
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("CREAR NUEVO", "Create")
 </p><br /><br />
 <table class="table">
     <tr>
