--- a/Proyecto-Final/Views/citas2/Index.cshtml
+++ b/Proyecto-Final/Views/citas2/Index.cshtml
@@ -23,8 +23,7 @@
         }
     </div>
 </div>
-<p class="btn btn-default">
-<p>
+<p class="btn btn-success">
     @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
