--- a/Proyecto-Final/Views/Usuarios/Index.cshtml
+++ b/Proyecto-Final/Views/Usuarios/Index.cshtml
@@ -23,6 +23,10 @@
         }
     </div>
 </div>
+
+<p>
+    <a class="btn btn-success" href="@Url.Action("exportReport","Home")">Download Report</a>
+</p>
 <p  >
     @Html.ActionLink("Create New", "Create")
 </p>
